# os_lab3_rust

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  justfile  publish.py  pyproject.toml
.github/workflows/: main.yml
file_system/: Cargo.toml  README.md  RusticFS.pyi  build.rs  building.md  pyproject.toml  pypy-example.py
file_system/Example/: README.md  Shell.py  __main__.py  ids.test.py
file_system/src/: dir_entry.rs  directories.rs  errors.rs  execute_py.rs  fat.rs  file_data.rs  files.rs  format.rs  lib.rs  other.rs  prelude.rs  traits.rs
file_system/src/py_bindings/: definitions.rs  mod.rs  py_filesystem.rs
file_system/src/tests/: mod.rs  path_tests.rs  task1.rs  task2.rs  task3.rs
file_system/src/utils/: dirs.rs  fixed_str.rs  mod.rs  path_handler.rs
logger_macro/: Cargo.toml
logger_macro/src/: lib.rs
rustic-web-shell/: Cargo.toml  README.md
rustic-web-shell/public/: styles.css
rustic-web-shell/src/: lib.rs  main.rs
rustic-web-shell/src/components/: mod.rs  output.rs
rustic-web-shell/src/pages/: home.rs
rustic_disk/: Cargo.toml
rustic_disk/src/: errors.rs  lib.rs  traits.rs
rustic_shell/: Cargo.toml
rustic_shell/src/: lib.rs
src/: lib.rs  main.rs
wasm_os_server/: Cargo.toml
wasm_os_server/src/: main.rs
web/: index.html  index.js  os_lab3.wasm  package-lock.json  package.json
