[package]
name = "file_system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
rustic_disk = { path = "../rustic_disk" }
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
serde-big-array = "0.5.1"
thiserror = "1.0.56"
log = "0.4.20"
env_logger = "0.11.1"
path-absolutize = "3.1.1"
logger_macro = { path = "../logger_macro" }

[features]
default = []
debug = ["rustic_disk/debug"]
trace = []