[package]
name = "file_system"
version = "0.1.5"
edition = "2021"
description = "A Rustic mockup File System running on top of a real file system"
license = "MIT"
readme = "README.md"
authors = ["Tosic.Killer <emil.schutt@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
chrono = "0.4.19"
rustic_disk = { path = "../rustic_disk" }
serde = { version = "1.0.196", features = ["derive"] }
serde_derive = "1.0.196"
serde-big-array = "0.5.1"
thiserror = "1.0.56"
log = "0.4.20"
env_logger = "0.11.1"
prettytable-rs = "0.10.0"
logger_macro = { path = "../logger_macro" }
pyo3-helper-macros = { version = "0.0.6", optional = true, features = ["multiple_pymethod"] }
pyo3 = { version = "0.20.0", features = ["anyhow"] }
pyo3-log = { version = "0.9.0", optional = true }

[build-dependencies]
pyo3-build-config = { version = "0.20.3", features = ["extension-module", "resolve-config"] }

[features]
default = []
debug = ["rustic_disk/debug"]
trace = []
py-bindings = ["dep:pyo3-helper-macros", "pyo3/extension-module", "pyo3/multiple-pymethods", "rustic_disk/py-bindings", "pyo3-log"]
abi3 = ["pyo3/abi3", "pyo3/abi3-py37", "py-bindings", "pyo3-build-config/abi3", "pyo3-build-config/abi3-py37"]
