[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"
description = "A Rustic mockup File System running on top of a real file system"
license = "MIT"
readme = "README.md"

[project]
name = "RusticFS"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["py-bindings"]
